task1/test_results_defects/infer_test/zero_division/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:22: error: Divide By Zero
  Expression `0` could be zero at line 22, column 2.
  20. 	int dividend = 1000;
  21. 	int ret;
  22. 	ret = dividend / 0;/*Tool should detect this line as error*/ /* ERROR:division by zero */
       ^
  23. }
  24. 

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:33: error: Divide By Zero
  Expression `0` could be zero at line 33, column 2.
  31. 	int dividend = 1000;
  32. 	int ret;
  33. 	dividend /= 0;/*Tool should detect this line as error*/ /* ERROR:division by zero */
       ^
  34. 	ret = dividend;
  35. }

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:46: error: Divide By Zero
  Expression `0` could be zero at line 46, column 2.
  44. 	int dividend = 1000;
  45. 	int ret;
  46. 	ret = dividend % 0;/*Tool should detect this line as error*/ /* ERROR:division by zero */
       ^
  47. }
  48. 

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:77: error: Divide By Zero
  Expression `divisors[2]` could be zero at line 77, column 2.
  75. 	int divisors[5] = {2, 1, 0, 3, 4};
  76. 	int ret;
  77. 	ret = dividend / divisors[2];/*Tool should detect this line as error*/ /* ERROR:division by zero */
       ^
  78. }
  79. 

#4
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:117: error: Divide By Zero
  Expression `zero_division_007_s_gbl.divisor` could be zero at line 117, column 2.
  115. 	int ret;
  116. 	zero_division_007_func_001();
  117. 	ret = dividend / zero_division_007_s_gbl.divisor;/*Tool should detect this line as error*/ /* ERROR:division by zero */
        ^
  118. }
  119. 

#5
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:128: error: Divide By Zero
  Expression `0.` could be zero at line 128, column 2.
  126. 	float dividend = 1000.0;
  127. 	float ret;
  128. 	ret = dividend / 0.0;/*Tool should detect this line as error*/ /* ERROR:division by zero */
        ^
  129. }
  130. 

#6
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:140: error: Divide By Zero
  Expression `divisor` could be zero at line 140, column 2.
  138. 	int divisor = 0;
  139. 	int ret;
  140. 	ret = dividend / divisor;/*Tool should detect this line as error*/ /* ERROR:division by zero */
        ^
  141. }
  142. 

#7
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:165: error: Divide By Zero
  Expression `((2*divisor)-4)` could be zero at line 165, column 2.
  163. 	int divisor = 2;
  164. 	int ret;
  165. 	ret = dividend / (2 * divisor - 4);/*Tool should detect this line as error*/ /* ERROR:division by zero */
        ^
  166. }
  167. 

#8
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:177: error: Divide By Zero
  Expression `((divisor*divisor)-4)` could be zero at line 177, column 2.
  175. 	int divisor = 2;
  176. 	int ret;
  177. 	ret = dividend / (divisor * divisor - 4);/*Tool should detect this line as error*/ /* ERROR:division by zero */
        ^
  178. 
  179. }

#9
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:194: error: Divide By Zero
  Expression `returned by zero_division_013_func_001()` could be zero at line 194, column 2.
  192. 	int dividend = 1000;
  193. 	int ret;
  194. 	ret = dividend / zero_division_013_func_001();/*Tool should detect this line as error*/ /* ERROR:division by zero */
        ^
  195. }
  196. 

#10
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:210: error: Divide By Zero
  Expression `0` could be zero at line 210, column 2.
  208. void zero_division_014 ()
  209. {
  210. 	zero_division_014_func_001(0);
        ^
  211. }
  212. 

#11
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/zero_division.c:224: error: Divide By Zero
  Expression `divisor1` could be zero at line 224, column 2.
  222. 	int ret;
  223. 	divisor1 = divisor;
  224. 	ret = dividend / divisor1;/*Tool should detect this line as error*/ /* ERROR:division by zero */
        ^
  225. }
  226. 

Found 12 issues
      Issue Type(ISSUED_TYPE_ID): #
  Divide By Zero(DIVIDE_BY_ZERO): 12
